--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+bson==0.5.8
 captcha==0.3
 dataclasses==0.6
 Django==2.1.7
@@ -11,8 +12,9 @@ Pillow==5.4.1
 post==2019.3.22
 public==2019.3.22
 pymongo==3.7.2
+python-dateutil==2.8.1
 pytz==2018.9
 query-string==2019.3.22
 request==2019.3.22
-six==1.12.0
+six==1.14.0
 sqlparse==0.2.4
